<resources>
    <string name="app_name">cosplay-planner</string>
    <string name="str_My_Cosplays">My cosplays</string>
    <string name="str_text_p">In progress</string>
    <string name="str_text_f">Finished</string>
    <string name="str_text_h">Hold</string>
    <string name="str_New_Cosplay">New cosplay</string>
    <string name="str_New_fandom">Fandom</string>
    <string name="str_New_Char">Character</string>
    <string name="str_to_long">Too long name!</string>
    <string name="str_Events">Events</string>
    <string name="str_New_Event">New event</string>
    <string name="str_Event_name">Event name</string>
    <string name="str_Event_type">Event type</string>
    <string name="str_Event_date">Event date</string>
    <string name="str_Event_place">Place</string>
    <string name="str_Event_costume">Costume</string>
    <string name="str_Event_steps">Steps</string>
    <string name="str_Cosplay_status">Status</string>
    <string name="str_Cosplay_progress">Progress</string>
    <string name="str_Cosplay_details">Details</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_delete_event">Delete event?</string>
    <string name="str_delete_detail">Delete detail?</string>
    <string name="str_delete_event_message">Are you sure what you want to delete this event?</string>

    <string name="str_delete_costume_message">Are you sure what you want to delete this costume?</string>

    <string name="str_delete_costume_message_full">This costume linked to</string>
    <string name="str_delete_detail_message">Are you sure what you want to delete this detail?</string>

    <string name="str_event">event</string>
    <string name="str_events">events</string>

    <string name="str_del_del">Delete costume and event with it</string>
    <string name="str_del_update">Delete costume, set "no" in events</string>

    <string-array name="Ev_Types">
        <item>Convention</item>
        <item>Party</item>
        <item>Photoshoot</item>
    </string-array>

    <string-array name="C_status">
        <item>In progress</item>
        <item>Finished</item>
        <item>On hold</item>
    </string-array>

    <string name="str_detail_type">Detail type</string>
    <string-array name="D_type">
        <item>Shoes</item>
        <item>Wig</item>
        <item>Accessories</item>
        <item>Props</item>
        <item>Tops</item>
        <item>Bottom</item>
        <item>Outerwear</item>
        <item>Other</item>
    </string-array>

    <string name="str_m_one" translatable="false">-1</string>


    <string name="str_Settings">Settings</string>
    <string name="str_Settings_theme">Theme</string>
    <string name="str_Settings_language">Language</string>

    <string-array name="S_theme">
        <item>Pink</item>
        <item>Blue</item>
    </string-array>

    <string-array name="S_language">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string name="str_change_status">Change costume status?</string>
    <string name="str_change_all_finished">All details are finished. Set entire costume status to finish?</string>
    <string name="str_change_not_all_finished">There are no finished details. Set entire costume status to in progress?</string>

    <string name="str_my_material">My material</string>
    <string name="str_material_base">Material base</string>

    <string name="str_material_name">Material name</string>
    <string name="str_material_unit">Unit of calculation</string>
    <string name="str_delete_material">Delete this material from detail?</string>

    <string name="str_delete_material_base">Delete this material?</string>
    <string name="str_delete_material_used">Material can\'t be deleted. Used in details</string>

    <string name="str_material_planned">All planned materials for costumes in progress</string>

    <string name="str_copy">Copy</string>

</resources>

