<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ViewModel"
            type="com.archi.cosplay_planner.MyMaterialViewModel" />
        <variable
            name="mm_handlers"
            type="com.archi.cosplay_planner.MyMaterial.Handler"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:id="@+id/l_main"
        android:paddingLeft="50dp"
        android:paddingBottom="10dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_id"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/str_my_material"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewEvent"
                android:paddingTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@android:drawable/ic_input_add"
                android:onClick="@{mm_handlers::onClickNewMaterial}"/>

            <TextView
                android:id="@+id/tw_base"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:onClick="@{mm_handlers::onClickMaterialBase}"
                android:text="@string/str_material_base"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:src="@android:drawable/btn_star_big_on"
                    android:onClick="@{mm_handlers::onClickToCosplay}"
                    android:contentDescription="@string/str_My_Cosplays"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:src="@android:drawable/btn_star_big_on"
                    android:onClick="@{mm_handlers::onClickToEvents}"
                    android:contentDescription="@string/app_name"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:src="@android:drawable/btn_star_big_on"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{mm_handlers::onClickToSettings}"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:src="@android:drawable/btn_star_big_on"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>







</layout>
