<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ViewModel"
            type="com.archi.cosplay_planner.EventViewModel" />
        <variable
            name="handlers"
            type="com.archi.cosplay_planner.EventScreen.Handler"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tran"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tran"
            android:paddingBottom="40sp"
            android:layout_gravity="top"
            android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@color/tran"
            style="@style/HeaderText"
            android:text="@string/str_Events"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tran"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEvent"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:layout_height="0dp"
            android:layout_weight="3"/>

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10sp"
                android:layout_gravity="end"
                android:src="@drawable/plus"
                android:background="@color/tran"
                android:onClick="@{handlers::onClickNewEvent}"
                android:contentDescription="@string/str_New_Event" />
        </LinearLayout>
    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|center"
            android:layout_weight="1"
            android:layout_marginBottom="30sp"
            android:layout_height="0dp"
            android:background="@color/tran">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:paddingRight="20dp"
                android:background="@color/tran"
                android:src="@drawable/cosplay"
                android:onClick="@{handlers::onClickToCosplay}"
                android:contentDescription="@string/str_My_Cosplays"/>
            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:paddingRight="20dp"
                android:src="@drawable/events"
                android:background="@color/tran"
                android:contentDescription="@string/app_name"/>
            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:paddingRight="20dp"
                android:background="@color/tran"
                android:src="@drawable/settings"
                android:contentDescription="@string/app_name"
                android:onClick="@{handlers::onClickToSettings}"/>
            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:paddingRight="20dp"
                android:background="@color/tran"
                android:src="@drawable/material"
                android:onClick="@{handlers::onClickToMMaterial}"
                android:contentDescription="@string/app_name"/>
        </LinearLayout>



    </LinearLayout>







</layout>
