<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ViewModel"
            type="com.archi.cosplay_planner.NewCViewModel" />

        <variable
            name="nc_handlers"
            type="com.archi.cosplay_planner.NewCosplayActivity.Handlers"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/l_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{nc_handlers::hideKeyboard}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingLeft="50dp"
            android:paddingBottom="10dp"
            android:paddingRight="50dp"
            android:orientation="vertical">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/str_New_Cosplay" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingLeft="50dp"
            android:paddingBottom="10dp"
            android:paddingRight="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/str_New_fandom" />
            <EditText
                android:id="@+id/e_f"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:hint="@string/str_New_fandom"
                android:text="@{ViewModel.fandom}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingLeft="50dp"
            android:paddingBottom="10dp"
            android:paddingRight="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/str_New_Char" />
            <EditText
                android:id="@+id/e_c"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="@string/str_New_Char"
                android:gravity="center"
                android:text="@{ViewModel.character}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="end"
                android:src="@android:drawable/ic_input_add"
                android:onClick="@{nc_handlers::onClickAdd}"/>
        </LinearLayout>


    </LinearLayout>


</layout>